Provide ability to save credentials in multiple kubernetes namespaces

--- a/example_k8s.yaml
+++ b/example_k8s.yaml
@@ -96,5 +96,7 @@ spec:
                     key: AWSSecretAccessKey
               - name: AWS_DEFAULT_REGION
                 value: "CHANGEME"
+              - name: K8S_NAMESPACES
+                value: example
           serviceAccountName: ecr-refresh
           restartPolicy: OnFailure
